--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   "dependencies": {
     "@element-plus/icons": "0.0.11",
     "@element-plus/icons-vue": "^2.1.0",
+    "assert": "^2.0.0",
     "axios": "^1.3.5",
+    "browserify-zlib": "^0.2.0",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "element-ui": "^2.15.13",
     "less": "^3.13.1",
     "less-loader": "^7.3.0",
     "node-sass": "^4.14.1",
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
     "sass-loader": "^7.3.1",
+    "stream-browserify": "^3.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5"
   },
