--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
+    "echarts": "^5.4.2",
     "element-ui": "^2.15.13",
     "less": "^3.13.1",
     "less-loader": "^7.3.0",
